...
    <string name="settings_auto_check_updates">Auto Check for Updates</string>
    <string name="settings_auto_check_updates_desc">Enable automatic update checks upon app launch</string>
    <string name="settings_get_updates">Check for Updates</string>
    <string name="settings_get_updates_desc">Check and install the latest version</string>
    <string name="settings_distribution_platform">Distribution Platform</string>

    <string name="reader_settings">Reader Settings</string>
    <string name="settings_reader_font_size">Font Size</string>
    <string name="settings_reader_line_spacing">Line Spacing</string>
    <string name="settings_reader_keep_screen_on">Keep Screen On</string>
    <string name="settings_reader_keep_screen_on_desc">Keep the screen active during reading. This may increase power consumption</string>
    <string name="settings_reader_battery_indicator">Battery Display Mode</string>
    <string name="settings_reader_battery_indicator_desc">Set the battery level indicator display mode</string>
    <string name="settings_reader_time_indicator">Time Indicator</string>
...
    <string name="settings_reader_quick_chapter_switch_desc">Automatically switch chapters when turning pages at the beginning or end of a chapter</string>
    <string name="settings_reader_back_block_mode">Back Prevention</string>
    <string name="settings_reader_back_block_mode_desc">Prevent accidental back actions in the reader. If fully blocked, only the top-left back button can be used</string>
    <string name="settings_reader_auto_margin">Auto Margin Adjustment</string>
    <string name="settings_reader_auto_margin_desc">Automatically detect and adjust screen margins. Disable this to set margins manually</string>
    <string name="settings_reader_top_margin">Top Margin</string>
    <string name="settings_reader_bottom_margin">Bottom Margin</string>
    <string name="settings_reader_left_margin">Left Margin</string>
    <string name="settings_reader_right_margin">Right Margin</string>

    <string name="display_settings">Display</string>
    <string name="settings_theme">Theme &amp; Paper</string>
    <string name="settings_theme_desc">Custom app theme and paper texture</string>
...

    <string name="settings_app_language">Language</string>
    <string name="settings_app_language_desc">Set the app language</string>
    <string name="settings_app_language_desc_unavailable">Set the app language (Android 13+ required)</string>
    <string name="settings_characters_variant">Chinese Characters Variant</string>
    <string name="settings_characters_variant_desc">Set Chinese character variants for different language regions</string>
    <string name="paper_settings">Paper</string>
    <string name="settings_theme_bg_image">Background Image</string>
    <string name="settings_theme_bg_image_desc">Customize reader background image</string>
    <string name="settings_theme_bg_image_built_in">Built-in</string>
    <string name="settings_theme_bg_image_built_in_desc">Kraft Paper</string>
    <string name="settings_theme_bg_image_custom">Custom</string>
    <string name="settings_theme_bg_display_mode">Background Display Mode</string>
...
